--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -13,28 +13,24 @@
     box-shadow: 0 0 5px black;
     border-radius: 8px;
     cursor: pointer;
-    background-color: hsla(259.4117647058824, 100%, 63%, 1);
+    color: #61dbfb;
+    background-color: hsla(204, 0%, 100%, 1);
     background-image: radial-gradient(
-            circle at 15% 85%,
-            hsla(318, 80%, 97%, 1) 19%,
-            transparent 84%
+            circle at 0% 0%,
+            hsla(207.2995861876241, 100%, 25%, 1) 3%,
+            transparent 70%
         ),
         radial-gradient(
-            circle at 31% 1%,
-            hsla(161.47058823529412, 99%, 84%, 1) 12%,
-            transparent 85%
+            circle at 100% 0%,
+            hsla(207.2412045062839, 100%, 40%, 1) 3%,
+            transparent 39%
         ),
         radial-gradient(
-            circle at 88% 87%,
-            hsla(163, 90%, 78%, 1) 3.6400864520532363%,
-            transparent 75.20902830975928%
-        ),
-        radial-gradient(
-            circle at 30% 27%,
-            hsla(314, 91%, 59%, 1) 14%,
-            transparent 90%
+            circle at 60% 102%,
+            hsla(207.08737864077668, 100%, 32%, 1) 0%,
+            transparent 134%
         );
-    background-blend-mode: normal, normal, normal, normal;
+    background-blend-mode: normal, normal, normal;
 }
 
 .card-front,
