--- a/src/index.css
+++ b/src/index.css
@@ -164,31 +164,22 @@ h1 {
     font-size: 17px;
     width: 100%;
     height: 100dvh;
-    background-color: hsla(197, 92%, 60%, 1);
+    color: white;
+    background-color: hsla(172.99999999999994, 0%, 100%, 1);
     background-image: radial-gradient(
-            circle at 96% 96%,
-            hsla(55.36363636363636, 93%, 54%, 0.85) 5%,
-            transparent 86%
+            circle at 1% 2%,
+            hsla(209.26829268292684, 100%, 8%, 1) 7%,
+            transparent 84%
         ),
         radial-gradient(
-            circle at 5% 90%,
-            hsla(229, 71%, 68%, 1) 13%,
-            transparent 65%
+            circle at 95% 96%,
+            hsla(204.11764705882356, 83%, 17%, 1) 7%,
+            transparent 84%
         ),
         radial-gradient(
-            circle at 57% 73%,
-            hsla(308, 93%, 51%, 1) 3%,
-            transparent 89%
-        ),
-        radial-gradient(
-            circle at 20% 4%,
-            hsla(318, 60%, 76%, 1) 22%,
-            transparent 56%
-        ),
-        radial-gradient(
-            circle at 74% 15%,
-            hsla(324, 92%, 59%, 1) 13%,
-            transparent 57%
+            circle at 2% 98%,
+            hsla(210.00000000000017, 63%, 25%, 1) 7%,
+            transparent 84%
         );
-    background-blend-mode: normal, normal, normal, normal, normal;
+    background-blend-mode: normal, normal, normal;
 }
