--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 */
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
@@ -89,12 +89,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -108,78 +108,78 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 body {
-    line-height: 1;
+  line-height: 1;
 }
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: '';
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 p {
-    text-wrap: pretty;
+  text-wrap: pretty;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    text-wrap: balance;
+  text-wrap: balance;
 }
 
 h4 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 h3 {
-    font-size: 33px;
+  font-size: 33px;
 }
 
 h2 {
-    font-size: 41px;
+  font-size: 41px;
 }
 
 h1 {
-    font-size: 49px;
+  font-size: 49px;
 }
 
 :root {
-    font-size: 17px;
-    width: 100%;
-    height: 100dvh;
-    color: white;
-    background-color: hsla(172.99999999999994, 0%, 100%, 1);
-    background-image: radial-gradient(
-            circle at 1% 2%,
-            hsla(209.26829268292684, 100%, 8%, 1) 7%,
-            transparent 84%
-        ),
-        radial-gradient(
-            circle at 95% 96%,
-            hsla(204.11764705882356, 83%, 17%, 1) 7%,
-            transparent 84%
-        ),
-        radial-gradient(
-            circle at 2% 98%,
-            hsla(210.00000000000017, 63%, 25%, 1) 7%,
-            transparent 84%
-        );
-    background-blend-mode: normal, normal, normal;
+  font-size: 17px;
+  width: 100%;
+  min-height: 100dvh;
+  color: white;
+  background-color: hsla(172.99999999999994, 0%, 100%, 1);
+  background-image: radial-gradient(
+      circle at 1% 2%,
+      hsla(209.26829268292684, 100%, 8%, 1) 7%,
+      transparent 84%
+    ),
+    radial-gradient(
+      circle at 95% 96%,
+      hsla(204.11764705882356, 83%, 17%, 1) 7%,
+      transparent 84%
+    ),
+    radial-gradient(
+      circle at 2% 98%,
+      hsla(210.00000000000017, 63%, 25%, 1) 7%,
+      transparent 84%
+    );
+  background-blend-mode: normal, normal, normal;
 }
