--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,59 +1,63 @@
 .card {
-    height: 100%;
-    aspect-ratio: 2/3;
-    perspective: 2000px;
+  height: 100%;
+  aspect-ratio: 2/3;
+  perspective: 2000px;
 }
 
 .card-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: all 0.7s cubic-bezier(0.1, 0.22, 0.8, 1.13);
-    transform-style: preserve-3d;
-    box-shadow: 0 0 5px black;
-    border-radius: 8px;
-    cursor: pointer;
-    color: #61dbfb;
-    background-color: hsla(204, 0%, 100%, 1);
-    background-image: radial-gradient(
-            circle at 0% 0%,
-            hsla(207.2995861876241, 100%, 25%, 1) 3%,
-            transparent 70%
-        ),
-        radial-gradient(
-            circle at 100% 0%,
-            hsla(207.2412045062839, 100%, 40%, 1) 3%,
-            transparent 39%
-        ),
-        radial-gradient(
-            circle at 60% 102%,
-            hsla(207.08737864077668, 100%, 32%, 1) 0%,
-            transparent 134%
-        );
-    background-blend-mode: normal, normal, normal;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: all 0.7s cubic-bezier(0.1, 0.22, 0.8, 1.13);
+  transform-style: preserve-3d;
+  box-shadow: 0 0 5px black;
+  border-radius: 8px;
+  cursor: pointer;
+  color: #61dbfb;
+  background-color: hsla(204, 0%, 100%, 1);
+  background-image: radial-gradient(
+      circle at 0% 0%,
+      hsla(207.2995861876241, 100%, 25%, 1) 3%,
+      transparent 70%
+    ),
+    radial-gradient(
+      circle at 100% 0%,
+      hsla(207.2412045062839, 100%, 40%, 1) 3%,
+      transparent 39%
+    ),
+    radial-gradient(
+      circle at 60% 102%,
+      hsla(207.08737864077668, 100%, 32%, 1) 0%,
+      transparent 134%
+    );
+  background-blend-mode: normal, normal, normal;
+}
+
+.card--unclickable .card-content {
+  cursor: default;
 }
 
 .card-front,
 .card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .card-front svg,
 .card-back svg {
-    width: 80%;
+  width: 80%;
 }
 
 .card-back {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .card.showBack .card-content {
-    transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
 }
