--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,43 @@
 path {
   transition: fill 0.6s;
 }
+
+.app-card {
+  height: 80%;
+  margin: auto;
+  position: relative;
+}
+.app-card .card:hover {
+  cursor: pointer;
+}
+
+.app-btn {
+  border: 1px solid black;
+  border-radius: 9999px;
+  background-color: white;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+.app-btn:hover {
+  box-shadow: 0 0 10px 2px white;
+}
+
+.app-card h2 {
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  transition: text-shadow 0.3s, box-shadow 0.3s;
+}
+.app-card h2:hover,
+.app-card h2:active {
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.8);
+  box-shadow: 1px 1px 10px 4px rgba(255, 255, 255, 0.6);
+}
