--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -31,3 +31,9 @@
 .modal button:hover {
   box-shadow: 0 0 10px 2px white;
 }
+
+.modal-options {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
